tests/externblob/instantiation.sy
Foo :: externblob {
    bar: fn -> int
}

make_foo: fn -> Foo: external

start :: fn do
    f := make_foo'
    f = make_foo'

    x : int : f.bar'

    q :: Foo {
        bar: fn -> 0 end
    }
end

// error: $ExternBlobInstance
